# MediaBrowser

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  shadow_top.xml  video_grid_card.xml  video_list_card.xml
app/src/main/res/menu/: activity_option.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
dlnacontroller/: build.gradle
dlnacontroller/src/main/: AndroidManifest.xml
dlnacontroller/src/main/application/: AndroidManifest.xml
dlnacontroller/src/main/cpp/: CMakeLists.txt  MediaControllerListener.h  MediaRemote.cpp  MediaRemote.h  MediaRemote_jni.cpp  MediaRemote_jni.h  MediaRemote_notify.cpp  MediaRemote_notify.h  MediaRendererListener.h  PltMicroMediaController.cpp  PltMicroMediaController.h  PltMicroMediaRenderer.cpp  PltMicroMediaRenderer.h  PltMicroMediaServer.cpp  PltMicroMediaServer.h  platinum-jni.cpp  platinum-jni.h  sinadlna.cpp  sinadlna.h  sinadlna_jni.cpp
dlnacontroller/src/main/cpp/include/Devices/MediaServer/: PltSyncMediaBrowser.h
dlnacontroller/src/main/cpp/include/module/platinum-av/jni/: Android.mk  PltFileTransmitControler.cpp  PltFileTransmitControler.h  PltFileTransmitDevice.cpp  PltFileTransmitDevice.h  PltMicroFileTransmitDevice.cpp  PltMicroFileTransmitDevice.h  PltMicroMediaController.cpp  PltMicroMediaController.h  PltMicroMediaServer.cpp  PltMicroMediaServer.h  platinum-cp-jni.cpp  platinum-cp-jni.h  platinum-ftd-jni.cpp  platinum-ftd-jni.h  platinum-ms-jni.cpp  platinum-ms-jni.h
dlnacontroller/src/main/cpp/include/module/platinum-ctrlpoint/jni/: Android.mk  PltMicroMediaController.cpp  PltMicroMediaController.h  PltMicroMediaServer.cpp  PltMicroMediaServer.h  platinum-cp-jni.cpp  platinum-cp-jni.h  platinum-ms-jni.cpp  platinum-ms-jni.h
dlnacontroller/src/main/cpp/include/module/platinum-renderer/jni/: Android.mk  PltMicroMediaRenderer.cpp  PltMicroMediaRenderer.h  platinum-jni.cpp  platinum-jni.h
dlnacontroller/src/main/cpp/include/module/platinum-server/jni/: Android.mk  platinum-jni.cpp  platinum-jni.h
gradle/wrapper/: gradle-wrapper.properties
livestreaming/src/main/module/: AndroidManifest.xml
openglrendering/src/main/module/: AndroidManifest.xml
videoeditor/src/main/: AndroidManifest.xml
videoplayer/: build.gradle
videoplayer/src/main/application/: AndroidManifest.xml
videoplayer/src/main/cpp/: CMakeLists.txt
videoplayer/src/main/module/: AndroidManifest.xml
(+67 files in other folders)
